@@ -12,7 +12,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Objects;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.atomic.AtomicReference;
@@ -42,8 +41,8 @@ public class ProjectWatcherTest extends BaseCommandTest {
             this.watchTestResources = testResources.resolve("watchFlagResources");
             URI testResourcesURI = Objects.requireNonNull(
                     getClass().getClassLoader().getResource("test-resources")).toURI();
-            Files.walkFileTree(Paths.get(testResourcesURI),
-                    new BuildCommandTest.Copy(Paths.get(testResourcesURI), testResources));
+            Files.walkFileTree(Path.of(testResourcesURI),
+                    new BuildCommandTest.Copy(Path.of(testResourcesURI), testResources));
             watcher = new AtomicReference<>();
         } catch (URISyntaxException e) {
             Assert.fail("error loading resources");
