@@ -23,7 +23,7 @@ import java.io.InputStream;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.Charset;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Objects;
 import java.util.Scanner;
 
@@ -56,6 +56,6 @@ public final class FileReaderUtils {
     public static File getResourceFile(String fileName) throws URISyntaxException {
         URL fileUrl = FileReaderUtils.class.getClassLoader().getResource(fileName);
         Objects.requireNonNull(fileUrl, "Template file resource could not be found.");
-        return Paths.get(fileUrl.toURI()).toFile();
+        return Path.of(fileUrl.toURI()).toFile();
     }
 }
