@@ -43,7 +43,6 @@ import org.wso2.ballerinalang.util.RepoUtils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 
 import static io.ballerina.projects.test.TestUtils.replaceDistributionVersionOfDependenciesToml;
@@ -55,7 +54,7 @@ import static io.ballerina.projects.test.TestUtils.replaceDistributionVersionOfD
  */
 public class DependencyFilePathsTest extends BaseTest {
 
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources").toAbsolutePath();
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources").toAbsolutePath();
     private static Path tempResourceDir;
 
     @BeforeClass
@@ -111,13 +110,13 @@ public class DependencyFilePathsTest extends BaseTest {
             }
         }
         assert filepath != null;
-        Path expectedPath = Paths.get("build/repo/bala/samjs/package_b/0.1.0/any/modules/package_b.mod_b1")
+        Path expectedPath = Path.of("build/repo/bala/samjs/package_b/0.1.0/any/modules/package_b.mod_b1")
                 .resolve("mod1.bal").toAbsolutePath();
         Assert.assertEquals(filepath.toString(), expectedPath.toString());
 
         // get document id of dependency filepath
         Project balaProject = TestUtils.loadProject(
-                Paths.get("build/repo/bala/samjs/package_b/0.1.0/any/"));
+                Path.of("build/repo/bala/samjs/package_b/0.1.0/any/"));
         DocumentId documentId1 = balaProject.documentId(filepath);
 
         Module mod1 = balaProject.currentPackage().module(
@@ -169,13 +168,13 @@ public class DependencyFilePathsTest extends BaseTest {
         }
 
         assert filepath != null;
-        Path expectedPath = Paths.get("build/repo/bala/ballerina/lang.float/0.0.0/any/modules/lang.float")
+        Path expectedPath = Path.of("build/repo/bala/ballerina/lang.float/0.0.0/any/modules/lang.float")
                 .resolve("float.bal").toAbsolutePath();
         Assert.assertEquals(filepath.toString(), expectedPath.toString());
 
         // get document id of dependency filepath
         Project balaProject = TestUtils.loadProject(
-                Paths.get("build/repo/bala/ballerina/lang.float/0.0.0/any"));
+                Path.of("build/repo/bala/ballerina/lang.float/0.0.0/any"));
         DocumentId documentId1 = balaProject.documentId(filepath);
         Assert.assertEquals(documentId1,
                 balaProject.currentPackage().getDefaultModule().documentIds().stream().findFirst().get());
